@@ -21,6 +21,7 @@
 		|--- stinit(struct proc *p)
 		|--- add_page(void *va, struct proc *p, struct swapp *n)
 		|--- remove_page(void *va, struct proc *p) 
+	|--- Added declaractions for page fault counts, page list counts, page list space
 
     * proc.c
 	|--- Contains call (in exit() method) for closing and removing
